--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-typed": "^2.0.12",
     "sonner": "^1.5.0",
     "web-vitals": "^2.1.4"
