--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,14 +12,16 @@
     "@uiw/react-codemirror": "^4.23.0",
     "ace-builds": "^1.35.3",
     "axios": "^1.7.2",
-    "codemirror": "^6.0.1",
     "js-cookie": "^3.0.5",
+    "katex": "^0.16.11",
     "react": "^18.3.1",
     "react-ace": "^12.0.0",
     "react-dom": "^18.3.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.14.1",
+    "react-table": "^7.8.0",
     "react-typed": "^2.0.12",
     "sonner": "^1.5.0",
     "web-vitals": "^2.1.4"
